Fixed small bug. z-index of link on article cards

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -229,7 +229,6 @@
 .article-link,
 .open-article-link {
   font-weight: bold;
-  z-index: 1;
 }
 
 .article .article-link__minimal,
