--- a/client/src/styles/partials/_article-cards.scss
+++ b/client/src/styles/partials/_article-cards.scss
@@ -46,7 +46,6 @@
 
   &-link {
     font-weight: bold;
-    z-index: 1;
   }
 
   .article-link__minimal {
